cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_133.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/asn1/a_verify.c:72: error: DEAD_STORE
  The value written to &ret (type int) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/asn1/a_verify.c:72:5: Write of unused value
70.           goto err;
71.       }
72.       ret = -1;
          ^
73.   
74.       if (EVP_VerifyFinal(ctx, (unsigned char *)signature->data,
